[package]
name = "serveur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rocket = { version = "0.5", features = ["json"] } # Check the version you need
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
mockall = "0.9"
futures = "0.3"
openai_api_rust = "0.1.8"
tokio-tungstenite = "0.15"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dev-dependencies]
httpmock = "0.7.0-rc.1"
